--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.tamic.novate:novate:1.2.0'
 
-    compile 'com.github.NashLegend:AnyPref:1.2.6'
+    compile 'com.cjj.materialrefeshlayout:library:1.3.0'
+    compile 'com.jude:rollviewpager:1.4.5'
 
 }
